# clash-cli

./: Cargo.toml  README.md
.github/workflows/: release.yml
scripts/: build-release.sh  smoke-test.sh  test-tun.sh
src/: main.rs
